; ModuleID = '/home/carl/AnghaBench/radare2/libr/egg/rlcc/extr_rlcc.c_main.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/egg/rlcc/extr_rlcc.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32*, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32, i32, i32, %struct.TYPE_10__** }

@.str = private unnamed_addr constant [6 x i8] c"ident\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"number\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"character\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"string\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"factor\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"term\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"lexp\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"stmt\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"exp\00", align 1
@.str.9 = private unnamed_addr constant [8 x i8] c"vartype\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"typeident\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"decls\00", align 1
@.str.12 = private unnamed_addr constant [5 x i8] c"args\00", align 1
@.str.13 = private unnamed_addr constant [5 x i8] c"body\00", align 1
@.str.14 = private unnamed_addr constant [8 x i8] c"comment\00", align 1
@.str.15 = private unnamed_addr constant [12 x i8] c"linecomment\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"asm\00", align 1
@.str.17 = private unnamed_addr constant [10 x i8] c"procedure\00", align 1
@.str.18 = private unnamed_addr constant [11 x i8] c"cprocedure\00", align 1
@.str.19 = private unnamed_addr constant [7 x i8] c"sigdef\00", align 1
@.str.20 = private unnamed_addr constant [8 x i8] c"sigbody\00", align 1
@.str.21 = private unnamed_addr constant [9 x i8] c"includes\00", align 1
@.str.22 = private unnamed_addr constant [7 x i8] c"smallc\00", align 1
@MPCA_LANG_DEFAULT = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [2957 x i8] c" ident     : /[a-zA-Z_][a-zA-Z0-9_]*/ ;                           \0A number    : /[0-9]+/ ;                                           \0A character : /'.'/ ;                                              \0A string    : /\22(\\\\.|[^\22])*\22/ ;                               \0A                                                                  \0A factor    : '(' <lexp> ')'                                       \0A           | <number>                                             \0A           | <character>                                          \0A           | <string>                                             \0A           | <ident> '(' <lexp>? (',' <lexp>)* ')'                \0A           | <ident> ;                                            \0A                                                                  \0A term      : <factor> (('*' | '/' | '%') <factor>)* ;             \0A lexp      : <term> (('+' | '-') <term>)* ;                       \0A                                                                  \0A stmt      : '{' <stmt>* '}'                                      \0A           | \22while\22 '(' <exp> ')' <stmt>                       \0A           | \22if\22    '(' <exp> ')' <stmt>                       \0A           | <ident> '=' <lexp> ';'                               \0A           | \22print\22 '(' <lexp>? ')' ';'                        \0A           | \22return\22 <lexp>? ';'                               \0A           | <ident> '(' (<number>|<ident>|<string>)? (',' (<string>|<number>|<ident>))* ')' ';' ;        \0A                                                                  \0A exp       : <lexp> '>' <lexp>                                    \0A           | <lexp> '<' <lexp>                                    \0A           | <lexp> \22>=\22 <lexp>                                 \0A           | <lexp> \22<=\22 <lexp>                                 \0A           | <lexp> \22!=\22 <lexp>                                 \0A           | <lexp> \22==\22 <lexp> ;                               \0A                                                                  \0A vartype   : (\22int\22 | \22char\22) ;                               \0A typeident : <vartype> <ident> ;                                  \0A decls     : (<typeident> ';')* ;                                 \0A args      : <typeident>? (',' <typeident>)* ;                    \0A body      : '{' <decls> <stmt>* '}' ;                            \0A comment   : /\\/\\*([^\\*])*\\*\\// ;                            \0A linecomment : /\\/\\/([^\\n])*/ ;                                \0A asm       : /\\:([^\\n])*/ ;                                \0A procedure : <ident> '@' \22global\22 '(' <number>? ')' <body> ; \0A cprocedure : <vartype> <ident> '(' <args> ')' <body> ; \0A sigdef    : <ident> '@' <ident> '(' <number> ')' ';' ; \0A sigbody   : '@' <ident> '(' <number> ')' ';' ; \0A includes  : (\22#include\22 <string>)* ;                           \0A smallc    : /^/ (<comment>|<asm>|<linecomment>|<sigdef>|<sigbody>|<procedure>|<cprocedure>)* <includes> <decls> /$/ ; \0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.24 = private unnamed_addr constant [20 x i8] c"; TAG = %s    (%s)\0A\00", align 1
@.str.25 = private unnamed_addr constant [8 x i8] c"<stdin>\00", align 1
@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32*, align 8
  %24 = alloca i32*, align 8
  %25 = alloca i32*, align 8
  %26 = alloca i32*, align 8
  %27 = alloca i32*, align 8
  %28 = alloca i32*, align 8
  %29 = alloca i32*, align 8
  %30 = alloca %struct.TYPE_9__, align 8
  %31 = alloca i32, align 4
  %32 = alloca %struct.TYPE_10__*, align 8
  %33 = alloca %struct.TYPE_10__*, align 8
  %34 = alloca %struct.TYPE_9__, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %35 = call i32* @mpc_new(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %35, i32** %6, align 8
  %36 = call i32* @mpc_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i32* %36, i32** %7, align 8
  %37 = call i32* @mpc_new(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  store i32* %37, i32** %8, align 8
  %38 = call i32* @mpc_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  store i32* %38, i32** %9, align 8
  %39 = call i32* @mpc_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  store i32* %39, i32** %10, align 8
  %40 = call i32* @mpc_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  store i32* %40, i32** %11, align 8
  %41 = call i32* @mpc_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  store i32* %41, i32** %12, align 8
  %42 = call i32* @mpc_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0))
  store i32* %42, i32** %13, align 8
  %43 = call i32* @mpc_new(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0))
  store i32* %43, i32** %14, align 8
  %44 = call i32* @mpc_new(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0))
  store i32* %44, i32** %15, align 8
  %45 = call i32* @mpc_new(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0))
  store i32* %45, i32** %16, align 8
  %46 = call i32* @mpc_new(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0))
  store i32* %46, i32** %17, align 8
  %47 = call i32* @mpc_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.12, i64 0, i64 0))
  store i32* %47, i32** %18, align 8
  %48 = call i32* @mpc_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.13, i64 0, i64 0))
  store i32* %48, i32** %19, align 8
  %49 = call i32* @mpc_new(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.14, i64 0, i64 0))
  store i32* %49, i32** %20, align 8
  %50 = call i32* @mpc_new(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.15, i64 0, i64 0))
  store i32* %50, i32** %21, align 8
  %51 = call i32* @mpc_new(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0))
  store i32* %51, i32** %22, align 8
  %52 = call i32* @mpc_new(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.17, i64 0, i64 0))
  store i32* %52, i32** %23, align 8
  %53 = call i32* @mpc_new(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.18, i64 0, i64 0))
  store i32* %53, i32** %24, align 8
  %54 = call i32* @mpc_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.19, i64 0, i64 0))
  store i32* %54, i32** %25, align 8
  %55 = call i32* @mpc_new(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.20, i64 0, i64 0))
  store i32* %55, i32** %26, align 8
  %56 = call i32* @mpc_new(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.21, i64 0, i64 0))
  store i32* %56, i32** %27, align 8
  %57 = call i32* @mpc_new(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.22, i64 0, i64 0))
  store i32* %57, i32** %28, align 8
  %58 = load i32, i32* @MPCA_LANG_DEFAULT, align 4
  %59 = load i32*, i32** %6, align 8
  %60 = load i32*, i32** %7, align 8
  %61 = load i32*, i32** %8, align 8
  %62 = load i32*, i32** %9, align 8
  %63 = load i32*, i32** %10, align 8
  %64 = load i32*, i32** %11, align 8
  %65 = load i32*, i32** %12, align 8
  %66 = load i32*, i32** %13, align 8
  %67 = load i32*, i32** %14, align 8
  %68 = load i32*, i32** %15, align 8
  %69 = load i32*, i32** %16, align 8
  %70 = load i32*, i32** %17, align 8
  %71 = load i32*, i32** %18, align 8
  %72 = load i32*, i32** %19, align 8
  %73 = load i32*, i32** %20, align 8
  %74 = load i32*, i32** %21, align 8
  %75 = load i32*, i32** %22, align 8
  %76 = load i32*, i32** %23, align 8
  %77 = load i32*, i32** %24, align 8
  %78 = load i32*, i32** %25, align 8
  %79 = load i32*, i32** %26, align 8
  %80 = load i32*, i32** %27, align 8
  %81 = load i32*, i32** %28, align 8
  %82 = call i32* @mpca_lang(i32 %58, i8* getelementptr inbounds ([2957 x i8], [2957 x i8]* @.str.23, i64 0, i64 0), i32* %59, i32* %60, i32* %61, i32* %62, i32* %63, i32* %64, i32* %65, i32* %66, i32* %67, i32* %68, i32* %69, i32* %70, i32* %71, i32* %72, i32* %73, i32* %74, i32* %75, i32* %76, i32* %77, i32* %78, i32* %79, i32* %80, i32* %81, i32* null)
  store i32* %82, i32** %29, align 8
  %83 = load i32*, i32** %29, align 8
  %84 = icmp ne i32* %83, null
  br i1 %84, label %85, label %91

85:                                               ; preds = %2
  %86 = load i32*, i32** %29, align 8
  %87 = call i32 @mpc_err_print(i32* %86)
  %88 = load i32*, i32** %29, align 8
  %89 = call i32 @mpc_err_delete(i32* %88)
  %90 = call i32 @exit(i32 1) #3
  unreachable

91:                                               ; preds = %2
  %92 = load i32, i32* %4, align 4
  %93 = icmp sgt i32 %92, 1
  br i1 %93, label %94, label %146

94:                                               ; preds = %91
  %95 = load i8**, i8*** %5, align 8
  %96 = getelementptr inbounds i8*, i8** %95, i64 1
  %97 = load i8*, i8** %96, align 8
  %98 = load i32*, i32** %28, align 8
  %99 = call i64 @mpc_parse_contents(i8* %97, i32* %98, %struct.TYPE_9__* %30)
  %100 = icmp ne i64 %99, 0
  br i1 %100, label %101, label %138

101:                                              ; preds = %94
  %102 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 1
  %103 = load %struct.TYPE_10__*, %struct.TYPE_10__** %102, align 8
  %104 = load i32, i32* @stderr, align 4
  %105 = call i32 @mpc_ast_print_to(%struct.TYPE_10__* %103, i32 %104)
  %106 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 1
  %107 = load %struct.TYPE_10__*, %struct.TYPE_10__** %106, align 8
  store %struct.TYPE_10__* %107, %struct.TYPE_10__** %32, align 8
  store i32 0, i32* %31, align 4
  br label %108

108:                                              ; preds = %131, %101
  %109 = load i32, i32* %31, align 4
  %110 = load %struct.TYPE_10__*, %struct.TYPE_10__** %32, align 8
  %111 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %110, i32 0, i32 0
  %112 = load i32, i32* %111, align 8
  %113 = icmp slt i32 %109, %112
  br i1 %113, label %114, label %134

114:                                              ; preds = %108
  %115 = load %struct.TYPE_10__*, %struct.TYPE_10__** %32, align 8
  %116 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %115, i32 0, i32 3
  %117 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %116, align 8
  %118 = load i32, i32* %31, align 4
  %119 = sext i32 %118 to i64
  %120 = getelementptr inbounds %struct.TYPE_10__*, %struct.TYPE_10__** %117, i64 %119
  %121 = load %struct.TYPE_10__*, %struct.TYPE_10__** %120, align 8
  store %struct.TYPE_10__* %121, %struct.TYPE_10__** %33, align 8
  %122 = load %struct.TYPE_10__*, %struct.TYPE_10__** %33, align 8
  %123 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %122, i32 0, i32 2
  %124 = load i32, i32* %123, align 8
  %125 = load %struct.TYPE_10__*, %struct.TYPE_10__** %33, align 8
  %126 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %125, i32 0, i32 1
  %127 = load i32, i32* %126, align 4
  %128 = call i32 @eprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.24, i64 0, i64 0), i32 %124, i32 %127)
  %129 = load %struct.TYPE_10__*, %struct.TYPE_10__** %33, align 8
  %130 = call i32 @processNode(%struct.TYPE_10__* %129)
  br label %131

131:                                              ; preds = %114
  %132 = load i32, i32* %31, align 4
  %133 = add nsw i32 %132, 1
  store i32 %133, i32* %31, align 4
  br label %108

134:                                              ; preds = %108
  %135 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 1
  %136 = load %struct.TYPE_10__*, %struct.TYPE_10__** %135, align 8
  %137 = call i32 @mpc_ast_delete(%struct.TYPE_10__* %136)
  br label %145

138:                                              ; preds = %94
  %139 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 0
  %140 = load i32*, i32** %139, align 8
  %141 = call i32 @mpc_err_print(i32* %140)
  %142 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 0
  %143 = load i32*, i32** %142, align 8
  %144 = call i32 @mpc_err_delete(i32* %143)
  br label %145

145:                                              ; preds = %138, %134
  br label %166

146:                                              ; preds = %91
  %147 = load i32, i32* @stdin, align 4
  %148 = load i32*, i32** %28, align 8
  %149 = call i64 @mpc_parse_pipe(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.25, i64 0, i64 0), i32 %147, i32* %148, %struct.TYPE_9__* %34)
  %150 = icmp ne i64 %149, 0
  br i1 %150, label %151, label %158

151:                                              ; preds = %146
  %152 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 1
  %153 = load %struct.TYPE_10__*, %struct.TYPE_10__** %152, align 8
  %154 = call i32 @mpc_ast_print(%struct.TYPE_10__* %153)
  %155 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 1
  %156 = load %struct.TYPE_10__*, %struct.TYPE_10__** %155, align 8
  %157 = call i32 @mpc_ast_delete(%struct.TYPE_10__* %156)
  br label %165

158:                                              ; preds = %146
  %159 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 0
  %160 = load i32*, i32** %159, align 8
  %161 = call i32 @mpc_err_print(i32* %160)
  %162 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 0
  %163 = load i32*, i32** %162, align 8
  %164 = call i32 @mpc_err_delete(i32* %163)
  br label %165

165:                                              ; preds = %158, %151
  br label %166

166:                                              ; preds = %165, %145
  %167 = load i32*, i32** %6, align 8
  %168 = load i32*, i32** %7, align 8
  %169 = load i32*, i32** %8, align 8
  %170 = load i32*, i32** %9, align 8
  %171 = load i32*, i32** %10, align 8
  %172 = load i32*, i32** %11, align 8
  %173 = load i32*, i32** %12, align 8
  %174 = load i32*, i32** %13, align 8
  %175 = load i32*, i32** %14, align 8
  %176 = load i32*, i32** %15, align 8
  %177 = load i32*, i32** %16, align 8
  %178 = load i32*, i32** %17, align 8
  %179 = load i32*, i32** %18, align 8
  %180 = load i32*, i32** %19, align 8
  %181 = load i32*, i32** %20, align 8
  %182 = load i32*, i32** %23, align 8
  %183 = load i32*, i32** %24, align 8
  %184 = load i32*, i32** %25, align 8
  %185 = load i32*, i32** %27, align 8
  %186 = load i32*, i32** %28, align 8
  %187 = call i32 @mpc_cleanup(i32 17, i32* %167, i32* %168, i32* %169, i32* %170, i32* %171, i32* %172, i32* %173, i32* %174, i32* %175, i32* %176, i32* %177, i32* %178, i32* %179, i32* %180, i32* %181, i32* %182, i32* %183, i32* %184, i32* %185, i32* %186)
  ret i32 0
}

declare dso_local i32* @mpc_new(i8*) #1

declare dso_local i32* @mpca_lang(i32, i8*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @mpc_err_print(i32*) #1

declare dso_local i32 @mpc_err_delete(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @mpc_parse_contents(i8*, i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @mpc_ast_print_to(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @eprintf(i8*, i32, i32) #1

declare dso_local i32 @processNode(%struct.TYPE_10__*) #1

declare dso_local i32 @mpc_ast_delete(%struct.TYPE_10__*) #1

declare dso_local i64 @mpc_parse_pipe(i8*, i32, i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @mpc_ast_print(%struct.TYPE_10__*) #1

declare dso_local i32 @mpc_cleanup(i32, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
